--- a/statement2.html
+++ b/statement2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Emotion Dating</title>
-    <link rel="stylesheet" type="text/css" href="CSS/statementStyle1.css">
+    <link rel="stylesheet" type="text/css" href="CSS/statementStyle2.css">
 </head>
 
 <body>
@@ -17,11 +17,12 @@
     </div>
 
     <div id="statementImg">
-        <a href="statement2.html" class="Button"><img src="image/1.jfif"></a>
+        <a href="statement3.html" class="Button"><img src="image/2.jfif"></a>
     </div>
-
+    
     <div id="statement">
-        <p>Sex ist für mich nebensächlich.</p>
+        <p>Ich finde klassische Geschlechterrollen bei Mann und Frau wichtig.</p>
+        <p>Mann sollte schon meistens die Initiative übernehmen.</p>
     </div>
 
     <div id="buttons">
