--- a/statement3.html
+++ b/statement3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Emotion Dating</title>
-    <link rel="stylesheet" type="text/css" href="CSS/statementStyle1.css">
+    <link rel="stylesheet" type="text/css" href="CSS/statementStyle3.css">
 </head>
 
 <body>
@@ -17,11 +17,11 @@
     </div>
 
     <div id="statementImg">
-        <a href="statement2.html" class="Button"><img src="image/1.jfif"></a>
+        <a href="statement4.html" class="Button"><img src="image/3.jfif"></a>
     </div>
 
     <div id="statement">
-        <p>Sex ist für mich nebensächlich.</p>
+        <p>Ich möchte auch viel Zeit mit Freunden ohne meinen Partner verbringen.</p>
     </div>
 
     <div id="buttons">
