--- a/result.html
+++ b/result.html
@@ -9,11 +9,7 @@
 
 <body>
     <div id="indexContent">
-        <h1>Welcome to Emotion Dating</h1>
-        <p>Preventing from a broken heart - useful AI in dating</p>
-    </div>
-    <div id="startButton">
-        <a href="waitRoom.html" class="Button">Get started</a>
+        <p>Endresult: XXX</p>
     </div>
     
 </body>
