--- a/result.html
+++ b/result.html
@@ -4,12 +4,26 @@
 <head>
     <meta charset="utf-8">
     <title>Emotion Dating</title>
-    <link rel = "stylesheet" type = "text/css" href = "CSS/indexStyle.css">
+    <link rel = "stylesheet" type = "text/css" href = "CSS/resultStyle.css">
 </head>
 
 <body>
     <div id="indexContent">
-        <p>Endresult: XXX</p>
+        <p>Dein Ergebnis! Mit diesen Matches hast du folgende Scores:</p>
+    </div>
+    
+    <div id="logo">
+        <img src="image/logo_dating.png" height="225x" width="264px*">
+    </div>
+
+    <div id="sofie">
+        <img src="image/bild_sofie.png" height="330px" width="350px">
+        <p>Sofie: 72%</p>
+    </div>
+
+    <div id="qinzi">
+        <img src="image/bild_qinzi.jpg" height="330px" width="247.5px">
+        <p>Qinzi: 54%</p>
     </div>
     
 </body>
