--- a/statement2.html
+++ b/statement2.html
@@ -17,15 +17,25 @@
         <h1><span id="show">Recording: 10 s</span></h1>
     </div>
 
+    <div id="logo">
+        <img src="image/logo_dating.png" height="225x" width="264px*">
+    </div>
+
     <div id="line"></div>
 
-    <div id="statementImg">
-        <img src="image/2.jfif">
+    <div id="username">
+        <form>
+            Username: <input type="text" id="usernameInput" style="height:30px;width:180px">
+        </form>
     </div>
-    
+
     <div id="statement">
         <p>Ich finde klassische Geschlechterrollen bei Mann und Frau wichtig.</p>
         <p>Der Mann sollte schon meistens die Initiative übernehmen.</p>
+    </div>
+
+    <div id="statementImg">
+        <img src="image/2.jfif" height="400px" width="400px">
     </div>
 
     <div id="buttons">
@@ -46,7 +56,7 @@
 
     window.addEventListener('load', () => {
         const constraints = {
-            audio: true,
+            // audio: true,
             video: {
             width: 300,
             height: 300
