--- a/statement2.html
+++ b/statement2.html
@@ -84,14 +84,24 @@
         });
 
         var t = 9;
+        var t_1 = 3;
         setInterval(() => {
             if (t < 0) {
-                console.log("recording stopped");
-                mediaRecorder.stop();
+                // console.log("recording stopped");
+                // mediaRecorder.stop();
                 return;
             }
             document.getElementById('show').innerHTML = "Recording: "+ t + "s";
             t--;
+        }, 1000);
+
+        setInterval(() => {
+            if (t_1 == 0) {
+                console.log("recording stopped");
+                mediaRecorder.stop();
+                return;
+            }
+            t_1--;
         }, 1000);
     });
 
