result in fe & username

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="username">
         <form>
-            Username: <input type="text" id="usernameInput" style="height:30px;width:180px">
+            Username: <input type="text" id="usernameInput" style="height:30px;width:180px;font-size:30px;">
         </form>
     </div>
     <div id="startButton">
