--- a/result.html
+++ b/result.html
@@ -11,6 +11,10 @@
     <div id="indexContent">
         <p>Dein Ergebnis! Mit diesen Matches hast du folgende Scores:</p>
     </div>
+
+    <div id="username">
+        <h1><span id="userName">Username: </span></h1>
+    </div>
     
     <div id="logo">
         <img src="image/logo_dating.png" height="225x" width="264px*">
@@ -25,12 +29,26 @@
         <img src="image/bild_qinzi.jpg" height="330px" width="247.5px">
         <p>Qinzi: 54%</p>
     </div>
+
+    <div id="result">
+        <img src="Backend/result-fe/my_figure.png" height="640px" width="800px">
+    </div>
     
 </body>
 	
 
 <script>
-
+    window.addEventListener('load', () => {
+        var str = window.location.search;
+        if (str.indexOf(name) != -1) {
+            var username = str.slice(6);
+            if (username.length != 0) {
+                document.getElementById('userName').innerHTML = "Username: " + username;
+            } else {
+                alert("No value found");
+            }
+        };
+    })
 </script>
 
 
