--- a/statement5.html
+++ b/statement5.html
@@ -24,9 +24,7 @@
     <div id="line"></div>
 
     <div id="username">
-        <form>
-            Username: <input type="text" id="usernameInput" style="height:30px;width:180px">
-        </form>
+        <h1><span id="userName">Username: </span></h1>
     </div>
 
     <div id="statement">
@@ -69,6 +67,16 @@
         }).catch(info => {
             alert('error' + info);
         });
+
+        var str = window.location.search;
+        if (str.indexOf(name) != -1) {
+            var username = str.slice(6);
+            if (username.length != 0) {
+                document.getElementById('userName').innerHTML = "Username: " + username;
+            } else {
+                alert("No value found");
+            }
+        };
     });
 
     startBtn.addEventListener('click', () => {
@@ -108,9 +116,13 @@
         if (videoData === null) return false;
         const link = document.createElement('a');
         link.href = URL.createObjectURL(videoData);
-        link.download = 'statement3.webm';
+        link.download = 'statement5.webm';
         link.click();
-        location = "result.html";
+        var str = window.location.search;
+        if (str.indexOf(name) != -1) {
+          var username = str.slice(6);
+        }
+        location = "result.html?name="+username;
     });
 
 </script>
